--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,7 +15,7 @@
 
     <main class="home-main-content">
         <div class="avatar-container">
-            <img id="avatar-image" src="images/avatar-lazy-max.png" alt="귀찮은 아바타">
+            <img id="avatar-image" src="images/avatar-angry.png" alt="귀찮은 아바타">
             
             <h2 id="avatar-message">어디 가지... 누가 추천 안 해주나</h2>
         </div>
