--- a/frontend/public/scanner.html
+++ b/frontend/public/scanner.html
@@ -16,7 +16,7 @@
     <main class="scanner-main-content">
         
         <div class="avatar-container scanner-avatar">
-            <img id="avatar-image" src="images/avatar-lazy-max.png" alt="스캔하는 아바타">
+            <img id="avatar-image" src="images/avatar-angry.png" alt="스캔하는 아바타">
             <h2 id="avatar-message">'찐큐'를 네모 안에 '대충' 맞춰주세요</h2>
         </div>
 
