fix(scanner.html): scanner.js?v=2 - ignore cache

--- a/frontend/public/scanner.html
+++ b/frontend/public/scanner.html
@@ -48,6 +48,6 @@
     <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jsrsasign/lib/jsrsasign-all-min.js"></script>
     
-    <script src="scanner.js"></script>
+<script src="scanner.js?v=2"></script>
 </body>
 </html>
